--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # directories
 TradingPartner/
 dic2etree/
+
+instance/adc-instances-e-invoice.xbrl
+instance/adc-instances.*
+instance\adc-instances0.*
